--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -1,5 +1,6 @@
 - nilsbore/geographic_info
 - nilsbore/rosbridge_suite
 - nilsbore/smarc_msgs
+- nilsbore/imc_ros_bridge
 - nilsbore/lolo_common
 - nilsbore/smarc_navigation
