--- a/rosdep/melodic/smarc.yaml
+++ b/rosdep/melodic/smarc.yaml
@@ -61,3 +61,6 @@ roswasm_tutorials:
 sam_webgui:
   ubuntu: [ros-melodic-sam-webgui]
   debian: [ros-melodic-sam-webgui]
+cola2_msgs:
+  ubuntu: [ros-melodic-cola2-msgs]
+  debian: [ros-melodic-cola2-msgs]
