--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -8,7 +8,7 @@
 - smarc-project/sam_common
 - smarc-project/smarc_utils
 - nilsbore/roswasm_suite
-- nilsbore/sam_webgui
+- smarc-project/sam_webgui
 - nilsbore/cola2_msgs_mirror
-- nilsbore/stonefish_ros
+- smarc-project/stonefish_ros
 - smarc-project/sam_stonefish_sim
