--- a/rosdep/melodic/smarc.yaml
+++ b/rosdep/melodic/smarc.yaml
@@ -70,3 +70,6 @@ stonefish_ros:
 sam_stonefish_sim:
   ubuntu: [ros-melodic-sam-stonefish-sim]
   debian: [ros-melodic-sam-stonefish-sim]
+sdl2_image:
+  ubuntu: [libsdl2-image-dev]
+  debian: [libsdl2-image-dev]
