--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -12,3 +12,4 @@
 - nilsbore/cola2_msgs_mirror
 - smarc-project/stonefish_ros
 - smarc-project/sam_stonefish_sim
+- smarc-project-native-gui/roswasm_suite_native
