--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -13,3 +13,4 @@
 - smarc-project/stonefish_ros
 - smarc-project/sam_stonefish_sim
 - smarc-project-native-gui/roswasm_suite_native
+- smarc-project-native-gui/sam_webgui_native
