--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -12,5 +12,6 @@
 - nilsbore/cola2_msgs_mirror
 - smarc-project/stonefish_ros
 - smarc-project/sam_stonefish_sim
+- smarc-project/lolo_stonefish_sim
 - smarc-project-native-gui/roswasm_suite_native
 - smarc-project-native-gui/sam_webgui_native
