--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -9,9 +9,11 @@
 - smarc-project/smarc_utils
 - nilsbore/roswasm_suite
 - smarc-project/sam_webgui
+- smarc-project/lolo_webgui
 - nilsbore/cola2_msgs_mirror
 - smarc-project/stonefish_ros
 - smarc-project/sam_stonefish_sim
 - smarc-project/lolo_stonefish_sim
 - smarc-project-native-gui/roswasm_suite_native
 - smarc-project-native-gui/sam_webgui_native
+- smarc-project-native-gui/lolo_webgui_native
