--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -17,3 +17,5 @@
 - smarc-project-native-gui/roswasm_suite_native
 - smarc-project-native-gui/sam_webgui_native
 - smarc-project-native-gui/lolo_webgui_native
+- smarc-project/smarc_base
+- smarc-project/smarc_desktop
