--- a/rosdep/melodic/smarc.yaml
+++ b/rosdep/melodic/smarc.yaml
@@ -100,6 +100,9 @@ sam_stonefish_sim:
 lolo_stonefish_sim:
   ubuntu: [ros-melodic-lolo-stonefish-sim]
   debian: [ros-melodic-lolo-stonefish-sim]
+sam_basic_controllers:
+  ubuntu: [ros-melodic-sam-basic-controllers]
+  debian: [ros-melodic-sam-basic-controllers]
 smarc_base:
   ubuntu: [ros-melodic-smarc-base]
   debian: [ros-melodic-smarc-base]
