--- a/scripts/package_repo/sources.yaml
+++ b/scripts/package_repo/sources.yaml
@@ -17,5 +17,6 @@
 - smarc-project-native-gui/sam_webgui_native
 - smarc-project-native-gui/lolo_webgui_native
 - smarc-project/smarc_controllers
+- smarc-project/uavcan_ros_bridge
 - smarc-project/smarc_base
 - smarc-project/smarc_desktop
